# libtgb1990

./: .gitignore  AUTHORS  BUGS  CONTRIBUTING  ChangeLog  ISSUES  MANIFEST  Makefile.am  README  TODO  configure.ac
doc/: Makefile.am
doc/images/: Makefile  NEN6772_11.1-1.tex  NEN6772_11.1-10.tex  NEN6772_11.1-11.tex  NEN6772_11.1-12.tex  NEN6772_11.1-13.tex  NEN6772_11.1-14.tex  NEN6772_11.1-15.tex  NEN6772_11.1-16a.tex  NEN6772_11.1-16b.tex  NEN6772_11.1-17.tex  NEN6772_11.1-18.tex  NEN6772_11.1-19.tex  NEN6772_11.1-2.tex  NEN6772_11.1-20.tex  NEN6772_11.1-21.tex  NEN6772_11.1-22.tex  NEN6772_11.1-23.tex  NEN6772_11.1-24.tex  NEN6772_11.1-25.tex  NEN6772_11.1-26.tex  NEN6772_11.1-27.tex  NEN6772_11.1-28.tex  NEN6772_11.1-29.tex  NEN6772_11.1-3.tex  NEN6772_11.1-30.tex  NEN6772_11.1-4.tex  NEN6772_11.1-5.tex  NEN6772_11.1-6.tex  NEN6772_11.1-7.tex  NEN6772_11.1-8.tex  NEN6772_11.1-9.tex  NEN6772_11.2-1.tex  NEN6772_11.2-2.tex  NEN6772_11.2-3.tex  NEN6772_11.2-4.tex  NEN6772_11.5-1.tex  NEN6772_11.5-2.tex  NEN6772_11.5-3.tex  NEN6772_11.5-4.tex  (+9 more)
src/: Makefile.am  NEN6772.c  i_prof.c  inp_prof.c  ipe_prof.c  test.c
test/: 001.IR3  001.RM3  001.UK3  001.UR3  002.IR3  002.RM3  002.UR3  003.IR3  003.RM3  003.UK3  003.UR3
